# rk3568

./: README.md
Buzzer/: settings.gradle.kts
Buzzer/app/: build.gradle.kts
Buzzer/app/src/main/: AndroidManifest.xml
Buzzer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Buzzer/app/src/main/res/layout/: activity_main.xml
Buzzer/app/src/main/res/values-night/: themes.xml
Buzzer/gradle/wrapper/: gradle-wrapper.properties
CAN/: settings.gradle.kts
CAN/app/: build.gradle.kts
CAN/app/src/main/: AndroidManifest.xml
CAN/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CAN/gradle/wrapper/: gradle-wrapper.properties
Led/app/: build.gradle.kts
Led/app/release/baselineProfiles/0/: app-release.dm
Led/app/release/baselineProfiles/1/: app-release.dm
Led/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Led/gradle/wrapper/: gradle-wrapper.properties
RS485/: settings.gradle.kts
RS485/app/: build.gradle.kts
RS485/app/release/: output-metadata.json
RS485/app/release/baselineProfiles/0/: app-release.dm
RS485/app/release/baselineProfiles/1/: app-release.dm
RS485/app/src/main/: AndroidManifest.xml
RS485/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: button_selector.xml  gradient_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_serial_port.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+35 files in other folders)
